--- a/ktlib-td-core/pom.xml
+++ b/ktlib-td-core/pom.xml
@@ -26,6 +26,7 @@
             <groupId>io.nekohasekai</groupId>
             <artifactId>ktlib-db</artifactId>
             <version>${project.parent.version}</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
