--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>ktlib-td</module>
         <module>ktlib-td-cli</module>
         <module>ktlib-td-http-api</module>
+        <module>ktlib-td-proxy</module>
     </modules>
 
     <issueManagement>
