--- a/ktlib-td-proxy/pom.xml
+++ b/ktlib-td-proxy/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
+        <dependency>
+            <groupId>io.nekohasekai</groupId>
+            <artifactId>ktlib-td-cli</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
