--- a/.github/workflows/publish-td-base-image.yml
+++ b/.github/workflows/publish-td-base-image.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Build And Publish
         run: |
           bash mvnw -T 1C install
-          bash mvnw -T 1C -pl ktlib-td-core exec:java
-          mv libs/libtdjni*.so ktlib-td-core/libtdjni.so
+          bash mvnw -T 1C -pl ktlib-td exec:java
+          mv libs/libtdjni*.so ktlib-td/libtdjni.so
           docker login docker.pkg.github.com -u $GITHUB_ACTOR -p "${{ secrets.GITHUB_TOKEN }}"
-          docker build -t td-base ktlib-td-core
+          docker build -t td-base ktlib-td
           tag="${{ github.ref }}"
           tag=${tag/"refs/tags/"/}
           docker tag td-base docker.pkg.github.com/nekohasekai/ktlib/td-base:$tag
