--- a/ktlib-td-cli/pom.xml
+++ b/ktlib-td-cli/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>ktlib-td</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.nekohasekai</groupId>
+            <artifactId>ktlib-db</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
