--- a/ktlib-core/pom.xml
+++ b/ktlib-core/pom.xml
@@ -15,7 +15,7 @@
     <artifactId>ktlib-core</artifactId>
 
     <properties>
-        <hutool.version>5.5.1</hutool.version>
+        <hutool.version>5.5.2</hutool.version>
     </properties>
 
     <dependencies>
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.9.0</version>
+            <version>4.10.0-RC1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>kotlin-stdlib</artifactId>
@@ -87,13 +87,13 @@
         <dependency>
             <groupId>com.esotericsoftware</groupId>
             <artifactId>kryo</artifactId>
-            <version>5.0.0-RC9</version>
+            <version>5.0.2</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
-            <version>1.7.30</version>
+            <version>2.0.0-alpha1</version>
         </dependency>
 
     </dependencies>
